Subscription min-height adjustment to fix alignement of subscriptions on minside

--- a/component-lib/src/molecules/Subscription/Subscription.pcss
+++ b/component-lib/src/molecules/Subscription/Subscription.pcss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    min-height: 300px;
+    min-height: 280px;
 
     /* Teaser */
     &__teaser {
